# fpl2duck

./: .gitignore  README.md  pyproject.toml
fpl2duck/: main.py
fpl2duck-backend/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
fpl2duck-backend/dump/: bootstrap.json  element-summary-1.json
fpl2duck-backend/extractors/: bootstrap_extractor.py  element_summary_extractor.py  fixtures_extractor.py  utils.py
fpl2duck-backend/models/: bootstrap.py  element_summary.py  fixtures.py
fpl2duck-frontend/: README.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
fpl2duck/api/: utils.py
fpl2duck/api/types/: bootstrap.py
fpl2sql-extractor/: .vercelignore  README.md  main.py  pyproject.toml
fpl2sql-extractor/api/: extractor.py
fpl2sql-extractor/dump/: bootstrap.json  element-summary-1.json  fixtures.json
fpl2sql-extractor/extractors/: element_summary_extractor.py  utils.py
fpl2sql-extractor/models/: bootstrap.py  element_summary.py
fpl2sql-extractor/utils/: package_sizes.py
fpl2sql-frontend/: README.md  index.html  main.js  package-lock.json  package.json  queries.js  style.css  vite.config.js
