[tool.poetry]
name = "fpl2duck"
version = "0.1.0"
description = "Bulid a DuckDB database for Fantasy Premier League"
authors = ["Colin Nattrass <cpnattrass@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pyright = "^1.1.277"
mypy = "^0.982"
flake8 = "^5.0.4"
python-dateutil = "^2.8.2"
pylint = "^2.15.5"
duckdb = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
