[tool.poetry]
name = "fpl2duck"
version = "0.1.0"
description = "Bulid a DuckDB database for Fantasy Premier League"
authors = ["Colin Nattrass <cpnattrass@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dateutil = "^2.8.2"
duckdb = "^0.10.0"
requests = "^2.31.0"
pydantic = "^2.6.3"
pyarrow = "^15.0.1"
boto3 = "^1.34.79"
urllib3 = "<2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pyright = "^1.1.277"
mypy = "^0.982"
flake8 = "^5.0.4"
datamodel-code-generator = "^0.25.4"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
